fix(swagger): swagger fixes
