# app/controllers/admin.controller.go
@@ -13,6 +13,6 @@ func AdminController(a *fiber.App) {
 	route.Get("/getForApprove", middleware.AuthAdmin, handlers.GetCardsForApprove)
 	route.Put("/validateCard", middleware.AuthAdmin, handlers.ValidateCard)
 	route.Put("/validateTag", middleware.AuthAdmin, handlers.ValidateTag)
-	route.Patch("/unban", middleware.AuthAdmin, handlers.UnbanCompanyHandler)    //TODO!: Need to do a personal list of banned for every admin as a source of banned id of Companys
-	route.Delete("/sofDelete", middleware.AuthAdmin, handlers.SoftDeleteHandler) //
+	route.Patch("/unban", middleware.AuthAdmin, handlers.UnbanCompanyHandler) //TODO!: Need to do a personal list of banned for every admin as a source of banned id of Companys
+	route.Delete("/ban", middleware.AuthAdmin, handlers.SoftDeleteHandler)    //
 }
