# app/handlers/admin.handler.go
@@ -175,7 +175,7 @@ func ValidateCard(c *fiber.Ctx) error {
 // @Failure 400 {object} utility.Message "Invalid request body"
 // @Failure 404 {object} utility.Message "Company not exist"
 // @Failure 500 {object} utility.Message "Internal server error"
-// @Router /admin/softDelete [delete]
+// @Router /admin/ban [delete]
 func SoftDeleteHandler(c *fiber.Ctx) error {
 	var company db.Company
 	var state bool
@@ -204,7 +204,7 @@ func SoftDeleteHandler(c *fiber.Ctx) error {
 // @Success 200 {object} utility.Message "Company added to server scope"
 // @Failure 400 {object} utility.Message "Invalid request body"
 // @Failure 500 {object} utility.Message "Internal server error"
-// @Router /admin/softDelete [delete]
+// @Router /admin/unban [delete]
 func UnbanCompanyHandler(c *fiber.Ctx) error {
 	var company db.Company
 	var state bool
